styling fixes for login, signup, earth loading symbol, TODO -> forget password font colors, spacing for reset password, verification

--- a/src/app/(pages)/forgot-password/page.module.css
+++ b/src/app/(pages)/forgot-password/page.module.css
@@ -2,10 +2,12 @@
   margin: auto 400px;
   padding: 20px;
   justify-content: center;
-  height: 100vh;
   align-items: center;
   display: flex;
   flex-direction: column;
+  background-color: white;
+  height: 70vh;
+  margin-left: 600px;
 }
 
 .title {
@@ -76,5 +78,21 @@
   text-align: center;
   margin-top: 20px;
   font-size: 13px;
+}
 
+.topLeft {
+  color: var(--Green-100, #519546);
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 100%;
+  padding-top: 30px;
+  padding-left: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.topLeft span {
+  margin-top: -5px;
 }
