--- a/src/app/(pages)/login/page.module.css
+++ b/src/app/(pages)/login/page.module.css
@@ -93,3 +93,20 @@
   .googleButton:hover {
     background-color: #f2f2f2;
   }
+
+  .topLeft {
+    color: var(--Green-100, #519546);
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 100%;
+    padding-top: 30px;
+    padding-left: 30px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .topLeft span {
+    margin-top: -5px;
+  }
