--- a/src/app/(pages)/reset-password/page.module.css
+++ b/src/app/(pages)/reset-password/page.module.css
@@ -84,4 +84,21 @@
     background-color: green;
     color: white;
   }
+
+  .topLeft {
+    color: var(--Green-100, #519546);
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 100%;
+    padding-top: 30px;
+    padding-left: 30px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .topLeft span {
+    margin-top: -5px;
+  }
   
